# Cymple

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: python-test.yml
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
src/cymple/: __init__.py  __main__.py  builder.py  typedefs.py  version.py
src/cymple/internal/: finale.py  internal_renderer.py  preface.py
src/cymple/internal/declarations/: !query_start.json  call.json  case.json  case_when.json  create.json  delete.json  filter.json  limit.json  match.json  merge.json  node.json  node_after_merge.json  on_create.json  on_match.json  operator_end.json  operator_start.json  order_by.json  procedure.json  relation.json  relation_after_merge.json  remove.json  return.json  set.json  set_after_merge.json  skip.json  union.json  unwind.json  where.json  with.json  yield.json
src/cymple/internal/overloads/: __init__.py  call.py  case.py  case_when.py  delete.py  filter.py  limit.py  match_optional.py  node.py  operator_end.py  operator_start.py  order_by.py  procedure.py  relation.py  remove.py  (+8 more)
src/samples/: basic.py  e2e.py  neo4j_config.py  neo4j_e2e.py  neo4j_helper.py  version.py
tests/: __init__.py  conftest.py
tests/data/onto_types/: labels.py  properties.py  relations.py
tests/e2e/: test_e2e_samples.py
tests/functional/: test_functionality.py
tests/unit/: test_clauses.py  test_generated.py  test_real_use_cases.py  test_samples.py
