[build-system]
requires = ["setuptools", "wheel"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
testpaths = [
    "tests/functional",
    "tests/e2e",
    "tests/integration",
    "tests/unit"
]
norecursedirs = [
    "__pycache__"
]
